# Grapefruit

./: .gitignore  CMakeLists.txt  Makefile  README.md  dbug.hpp  font.hpp  game.cpp  game.hpp  main.cpp  resources.qrc  run.sh  settings.cpp  shell.nix  style.cpp  style.hpp  style.qss  tasks.cpp  tasks.hpp
android/: AndroidManifest.xml
android/res/values/: styles.xml
android/src/org/extra/AndrdQtBridge/: DatePick.java
base/: choose.cpp  choose.hpp  converse.cpp  converse.hpp  externs.cpp  externs.hpp  importance.cpp  importance.hpp  itemopts.cpp  itemopts.hpp  options.cpp  options.hpp  quals.cpp  quals.hpp  scenes.cpp  scenes.hpp  task.cpp  task.hpp  taskload.cpp  taskload.hpp  tasks.cpp  tasks.hpp
data/: README.md  conv.yml  quals.yml  scenes.yml
extra/: bgitem.cpp  bgitem.hpp  date-desktop.cpp  date-mobile.cpp  date.cpp  date.hpp  drag.cpp  drag.hpp  itemopts.cpp  itemopts.hpp
src/: game.cpp
wids/: confirm.cpp  confirm.hpp  flow.cpp  flow.hpp  house.cpp  house.hpp  icobtn.hpp  qualsEdit.cpp  qualsEdit.hpp  renameOverl.cpp  renameOverl.hpp  secret.cpp  secret.hpp  slider.cpp  slider.hpp  taskOverlay.cpp  taskOverlay.hpp  taskbbl.cpp  taskbbl.hpp  txtedit.cpp  txtedit.hpp
